# iterator_interface

./: .beman-tidy.yaml  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Makefile  README.md  vcpkg.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  ci_tests.yml  pre-commit-check.yml  pre-commit-update.yml  pre-commit.yml  vcpkg-release.yml
cmake/: CompilerFeatureTest.cmake  Config.cmake.in  gcovr.cfg.in
etc/: ci-clang-toolchain.cmake  clang-16-toolchain.cmake  clang-flags.cmake  gcc-11-toolchain.cmake  gcc-12-toolchain.cmake  gcc-flags.cmake  gcc-toolchain.cmake  llvm-16-toolchain.cmake  llvm-master-toolchain.cmake  llvm-toolchain.cmake  toolchain.cmake
examples/: CMakeLists.txt  README.md  filter_int_iterator.cpp  repeated_chars_iterator.cpp  sample.cpp
include/beman/iterator_interface/: CMakeLists.txt  config.hpp  config.hpp.in  config_generated.hpp.in  iterator_interface.hpp  iterator_interface_access.hpp
include/beman/iterator_interface/detail/stl_interfaces/: config.hpp  fwd.hpp  iterator_interface.hpp
include/beman/iterator_interface26/: config.hpp.in  iterator_interface.hpp  iterator_interface_access.hpp
include/beman/iterator_interface26/detail/stl_interfaces/: config.hpp  fwd.hpp  iterator_interface.hpp
infra/cmake/: telemetry.sh
port/: portfile.cmake.in  vcpkg.json.in
src/Beman/iterator/: CMakeLists.txt  iterator_interface.cpp  iterator_interface.hpp  iterator_interface.t.cpp
src/beman/iterator_interface/: CMakeLists.txt  iterator_interface.cpp  iterator_interface.t.cpp
src/beman/iterator_interface26/: CMakeLists.txt  iterator_interface.cpp  iterator_interface.t.cpp
tests/: CMakeLists.txt  iterator_interface.test.cpp
tests/beman/iterator_interface/: CMakeLists.txt  iterator_interface.test.cpp
